# MediaForge

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  env  pyproject.toml  requirements.txt  resume_demo.py  usage_tracker_demo.py
.verify/: check_download_opts.py  check_factory.py  check_feature_flags.py  check_models.py  check_providers.py
api/: __init__.py  config.py  dependencies.py  main.py
api/database/: __init__.py  connection.py  models.py
api/middleware/: __init__.py  error_handler.py  rate_limiter.py  request_logger.py
api/routers/: __init__.py  clips.py  clips_merge.py  config.py  downloads.py  features.py  health.py  history.py  providers.py  queue.py  resolve.py  transcripts.py  usage.py  ws.py
api/schemas/: __init__.py  clips.py  common.py  config.py  (+5 more)
config/: default.yaml  feature_flags.yaml
desktop/: __init__.py  __main__.py  app.py  autostart.py  bridge.py  clipboard.py  config.py  crash_handler.py  dashboard.py  dialogs.py  hotkeys.py  instance_lock.py  notifications.py  persistence.py  server.py  tray.py  updater.py  version.py
docker/: docker-compose.dev.yml  init-db.sql
docs/: BUILD_AND_USAGE.md  TESTING_DOWNLOADS.md
requirements/: base.txt  dev.txt
scripts/: __init__.py  api_smoke_test.py  cli_demo.py  console_utils_demo.py  phase_25_demo.py  smoke_test.py  verify_api.py  verify_api_audit.py  verify_endpoints.py  verify_new_endpoints.py
src/: __init__.py  config.py  env_loader.py  exceptions.py  grabitdown.py  log_safe.py
tests/: __init__.py  conftest.py
web/: package-lock.json  package.json  tsconfig.json
(+135 files in other folders)
