[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grabitdown"
version = "0.1.0"
description = "GrabItDown — Production-grade media downloader platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "click>=8.0",
  "rich>=13.0",
  "yt-dlp>=2024.0",
  # API & server (websockets required for /api/v1/ws/progress)
  "uvicorn[standard]>=0.30.0",
  "websockets>=14.0",
  "fastapi>=0.115.0",
  # Database
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  # Config
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Native desktop window (optional; on Windows needs pythonnet which may not build on Python 3.14)
desktop = [
  "pywebview>=4.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3.0",
  "mypy>=1.8",
]

[project.scripts]
gid = "src.cli.cli:main"
grabitdown = "src.cli.cli:main"

[tool.pytest.ini_options]
markers = [
  "integration: tests requiring network access",
]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src"]

